Grades refactor
