# src/main/java/com/finalproject/backend/dto/grade/CourseGradesResponse.java
@@ -1,0 +1,11 @@
+package com.finalproject.backend.dto.grade;
+
+import java.util.List;
+
+public record CourseGradesResponse(
+        Long classCourseId,
+        String course,
+        String teacher,
+        List<CourseStudentsGradesDTO> students
+) {}
+
