# src/main/java/com/finalproject/backend/dto/grade/CourseStudentsGradesDTO.java
@@ -1,0 +1,10 @@
+package com.finalproject.backend.dto.grade;
+
+import java.util.List;
+
+public record CourseStudentsGradesDTO(
+        Long studentId,
+        String studentName,
+        String classroom,
+        List<GradeEntryDTO> grades
+) {}
